Create the second container of the page with an awesome images
Create two containers for text content and image

--- a/index.html
+++ b/index.html
@@ -19,10 +19,15 @@
         </ul>
     </div>
     <div class="second-container">
-        <div class="information">Some random information</div>
-        <div class="some-image">
-            <img src="./images/mickey_mouse.svg" alt="Disneys mickey mouse">
-            <p class="image-description"> this is some subtext under an illustration of an image</p>
+        <div class="awesome-title" >
+            <div class="awesome-about">This website is awesome</div>
+            <p class="awesome-paragraph">This website has some subtext that goes here under the main title. Its a smaller font and the color is lower contrast</p>
+            <button class="awesome-button">Sign Up</button>
+        </div>
+        <div class="awesome-image">
+
+            <img src="./images/mickey_mouse.svg" alt="awesome mickey mouse">
+
         </div>
 
     </div>
