Create the second container for second row items
Add a short description, sigup button and image placeholder

--- a/index.html
+++ b/index.html
@@ -21,13 +21,12 @@
     <div class="second-container">
         <div class="awesome-title" >
             <div class="awesome-about">This website is awesome</div>
-            <p class="awesome-paragraph">This website has some subtext that goes here under the main title. Its a smaller font and the color is lower contrast</p>
+            <div class="awesome-paragraph">This website has some subtext that goes here under the main title. Its a smaller font and the color is lower contrast</div>
             <button class="awesome-button">Sign Up</button>
         </div>
-        <div class="awesome-image">
+        <div class="awesome-image"> this is a placeholder for a photo
 
-            <img src="./images/mickey_mouse.svg" alt="awesome mickey mouse">
-
+            <!-- <img src="./images/mickey_mouse.svg" alt="mickey_mouse"> -->
         </div>
 
     </div>
