Add third container for the third row of the page
create an flexible image container with illustration text below it

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Landing Page</title>
 </head>
 <body>
+    <!-- create a header container -->
     <div class="header">
         <div class="logo">Header Logo</div>
         <ul class="header-links">
@@ -18,6 +19,7 @@
             <li class="links">header link three</li>
         </ul>
     </div>
+    <!-- create the second row containers -->
     <div class="second-container">
         <div class="awesome-title" >
             <div class="awesome-about">This website is awesome</div>
@@ -28,6 +30,32 @@
 
             <!-- <img src="./images/mickey_mouse.svg" alt="mickey_mouse"> -->
         </div>
+    </div>
+    <!-- create the third row container -->
+     <div class="third-container">
+        <div class="information">Some random information</div>
+        <div class="pretty-images">
+            <div class="solo-image">
+                <img src="./images/mickey_mouse.svg" alt="">
+                <div class="image-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="solo-image">
+                <img src="./images/mickey_mouse.svg" alt="">
+                <div class="image-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="solo-image">
+                <img src="./images/mickey_mouse.svg" alt="">
+                <div class="image-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="solo-image">
+                <img src="./images/mickey_mouse.svg" alt="">
+                <div class="image-text">this is some subtext under an illustration or image</div>
+            </div>            
+
+        </div>
+
+     </div>
+
 
     </div>
 </body>
