Create a section for a famous quote from Thor

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
             <div class="solo-image">
                 <img src="./images/mickey_mouse.svg" alt="">
                 <div class="image-text">this is some subtext under an illustration or image</div>
-            </div>            
-
+            </div>      
         </div>
-
      </div>
-
-
+     <!-- create a fourth container for a famous quote -->
+      <div class="famous-quote">
+        <div class="quote">This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice."</div>
+        <div class="quoted-from">-Thor, God of Thunder</div>
     </div>
 </body>
 </html>
