Create a footer for the page

--- a/index.html
+++ b/index.html
@@ -58,5 +58,15 @@
         <div class="quote">This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice."</div>
         <div class="quoted-from">-Thor, God of Thunder</div>
     </div>
+        <!-- create a div for a call to action -->
+    <!-- <div class="call-to-action">
+        <div class="time"> Call to action!It's time!</div>
+        <div class="sign-up">Sign up for our product by clicking that button right ovr there!</div>
+        <button class="sign-up"> Sign Up</button>
+    </div> -->
+    <!-- create a footer -->
+     <div class="footer">
+        Copyright &copy; The God Fathers
+     </div>
 </body>
 </html>
