Add the call to action section
call users to signup more exiting products

--- a/index.html
+++ b/index.html
@@ -59,14 +59,16 @@
         <div class="quoted-from">-Thor, God of Thunder</div>
     </div>
         <!-- create a div for a call to action -->
-    <!-- <div class="call-to-action">
-        <div class="time"> Call to action!It's time!</div>
-        <div class="sign-up">Sign up for our product by clicking that button right ovr there!</div>
+    <div class="call-to-action">
+        <div class="time"> Call to action!It's time!
+            <div class="sign-description">Sign up for our product by clicking that button right over there!</div>
+        </div>
+        
         <button class="sign-up"> Sign Up</button>
-    </div> -->
+    </div>
     <!-- create a footer -->
      <div class="footer">
-        Copyright &copy; The God Fathers
+        Copyright &copy; The God Fathers!
      </div>
 </body>
 </html>
